refactor: wow, progress
