# src/main/java/dev/roelofr/domain/rest/GetMeResponse.java
@@ -1,0 +1,12 @@
+
+package dev.roelofr.domain.rest;
+
+import lombok.Builder;
+
+@Builder
+public record GetMeResponse(
+    String name,
+    String email
+) {
+    //
+}
