# src/main/java/dev/roelofr/domain/rest/PostLoginRequest.java
@@ -1,0 +1,12 @@
+
+package dev.roelofr.domain.rest;
+
+import lombok.Builder;
+
+@Builder
+public record PostLoginRequest(
+    String username,
+    String password
+) {
+    //
+}
