# src/main/java/dev/roelofr/domain/rest/PostLoginResponse.java
@@ -1,0 +1,15 @@
+
+package dev.roelofr.domain.rest;
+
+import lombok.Builder;
+
+import java.time.OffsetDateTime;
+
+@Builder
+public record PostLoginResponse(
+    String name,
+    String jwt,
+    OffsetDateTime expiration
+) {
+    //
+}
